--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "@google/genai": "^1.29.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@nuxt/content": "^3.8.0",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/image": "2.0.0",
     "@nuxt/ui": "4.1.0",
     "@nuxtjs/mdc": "0.18.2",
     "@tailwindcss/vite": "^4.1.17",
+    "better-auth": "^1.3.34",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
     "eslint": "^9.39.1",
     "nuxt": "^4.2.1",
     "pdf-parse": "^2.4.5",
@@ -30,6 +37,8 @@
   "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
-    "@types/node": "^24.10.0"
+    "@types/node": "^24.10.0",
+    "drizzle-kit": "^0.31.6",
+    "tsx": "^4.20.6"
   }
 }
