--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "nuxt prepare",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@google/genai": "^1.29.0",
@@ -20,6 +21,8 @@
     "@nuxt/image": "2.0.0",
     "@nuxt/ui": "4.1.0",
     "@nuxtjs/mdc": "0.18.2",
+    "@polar-sh/better-auth": "^1.3.0",
+    "@polar-sh/sdk": "^0.41.3",
     "@tailwindcss/vite": "^4.1.17",
     "better-auth": "^1.3.34",
     "dotenv": "^17.2.3",
