--- a/package.json
+++ b/package.json
@@ -14,20 +14,25 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@dodopayments/better-auth": "^1.3.6",
     "@google/genai": "^1.29.0",
+    "@iconify-json/hugeicons": "^1.2.18",
     "@neondatabase/serverless": "^1.0.2",
     "@nuxt/content": "^3.8.0",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/image": "2.0.0",
     "@nuxt/ui": "4.1.0",
     "@nuxtjs/mdc": "0.18.2",
-    "@polar-sh/better-auth": "^1.3.0",
-    "@polar-sh/sdk": "^0.41.3",
     "@tailwindcss/vite": "^4.1.17",
     "better-auth": "^1.3.34",
+    "cheerio": "^1.1.2",
+    "dodopayments": "^2.6.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "eslint": "^9.39.1",
+    "mammoth": "^1.11.0",
+    "motion-v": "^1.7.4",
+    "nodemailer": "^7.0.10",
     "nuxt": "^4.2.1",
     "pdf-parse": "^2.4.5",
     "tailwindcss": "^4.1.17",
@@ -41,6 +46,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.10.0",
+    "@types/nodemailer": "^7.0.4",
     "drizzle-kit": "^0.31.6",
     "tsx": "^4.20.6"
   }
